# CX4013

./: Client.py  Marshalling.py  README.md  Server.py  Untitled-1.py  bookings.sqlite  clientasyn.py  out  playground.py  playgroundcallback.py  pyproject.toml  server.py
Server/: misc.py  table.py
client/: bookingclient.py  hooks.py  main.py  notificationserver.py  repl.py
cx4013/client/: hooks.py  main.py  notificationserver.py  repl.py
cx4013/rpc/: common.py  helpers.py  packet.py  protocol.py  proxy.py  skeleton.py
cx4013/serialization/: common.py  derived.py  numeric.py  wellknown.py
cx4013/server/: apptypes.py  bookingserver.py  bookingtable.py  main.py
diagrams/: Makefile  dropsim.dot  setup.dot  types.dot
rpc/: common.py  exceptions.py  generators.py  helpers.py  packet.py  protocol.py  proxy.py  skeleton.py
serialization/: common.py  derived.py  numeric.py  wellknown.py
server/: bookingserver.py  bookingtable.py  main.py  types.py
session/: packet.py  protocol.py  test.py
test/serialization/: test_derived.py  test_numeric.py
tests/cx4013/serialization/: test_derived.py  test_numeric.py
