[tool.poetry]
name = "cal_compiler"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
typing-extensions = "^3.7.4"
boltons = "^20.2.1"
aioconsole = "^0.3.1"
tinydb = "^4.4.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
black = "^20.8b1"
tox = "^3.21.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
