[tool.poetry]
name = "cx4013"
version = "0.1.0"
description = "CX4013 Lab Project"
authors = ["Celine Wong Si Lin", "Ang Zhan Phung", "Shenghao Yang <me@shenghaoyang.info>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
typing-extensions = "^3.7.4"
boltons = "^20.2.1"
prompt-toolkit = "^3.0.17"
tabulate = "^0.8.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
black = "^20.8b1"
tox = "^3.21.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cx4013_client = 'cx4013.client.main:main_wrapper'
cx4013_server = 'cx4013.server.main:main_wrapper'
